SigmaCodebackup3rdSep/objects/Tax_Rate__c.object
<CustomObject>
    <fields>
        <fullName>CurrencyIsoCode__c</fullName>
        <label>Currency</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>Tax_Code__c</referenceTo>
        <relationshipLabel>Tax Rates</relationshipLabel>
        <relationshipName>Tax_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Treatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Treatment</label>
        <referenceTo>Tax_Treatment__c</referenceTo>
        <relationshipLabel>Tax Rates</relationshipLabel>
        <relationshipName>Tax_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tax Rate</label>
    <nameField>
        <label>Tax Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Tax_rate_should_be_positive</fullName>
        <active>true</active>
        <errorConditionFormula>Tax_Rate__c   &lt;  0</errorConditionFormula>
        <errorDisplayField>Tax_Rate__c</errorDisplayField>
        <errorMessage>Tax rate should be POSITIVE</errorMessage>
    </validationRules>
</CustomObject>